--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <div id="particles-js"></div>
 
 <!-- scripts -->
-<script src="../Particle.js/particles.js"></script>
-<script src="../Particle.js/js/app.js"></script>
+<script src="./Particle.js/particles.js"></script>
+<script src="./Particle.js/js/app.js"></script>
 
   
 </body>
