--- a/links/prelim/prelims.html
+++ b/links/prelim/prelims.html
@@ -19,8 +19,20 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="prelims.html">Prelims</a></li>
-                            <li><a href="../midterm/midterms.html">Midterms</a></li>
-                            <li><a href="../finals/finals.html">Finals</a></li>
+                            <li>Midterms
+                            <ul>
+									<li><a href="../midterm/links/CSS.html">CSS</a></li>
+									<li><a href="../midterm/links/javascript.html">JavaScript</a></li>
+                                </ul>
+                            </li>
+                            <li>Finals
+                            <ul>
+									<li><a href="servlet.html">Servlet</a></li>
+									<li><a href="nodejs.html">NodeJS</a></li>
+                                    <li><a href="php.html">PHP</a></li>
+                                    <li><a href="owasp.html">OWASP</a></li>
+                            </ul>
+                            </li>
 							<li>
 								<a href="#">Layouts</a>
 								<ul>
