--- a/links/midterm/links/CSS.html
+++ b/links/midterm/links/CSS.html
@@ -14,7 +14,7 @@
 
 	<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="prelims.html">Web Systems and Technologies</a></h1>
+					<h1 id="logo"><a href="../prelim/prelims.html">Web Systems and Technologies</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="../../prelim/prelims.html">Prelims</a></li>
@@ -32,23 +32,7 @@
                                     <li><a href="../../finals/links/owasp.html">OWASP</a></li>
                             </ul>
                             </li>
-							<li>
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
+
 						</ul>
 					</nav>
 				</header>
