Made some adjustments

--- a/links/finals/links/OWASP.html
+++ b/links/finals/links/OWASP.html
@@ -16,17 +16,17 @@
 
         <!-- Header -->
         <header id="header">
-            <h1 id="logo"><a href="prelims.html">Web Systems and Technologies</a></h1>
+            <h1 id="logo"><a href="../../../index.html">Web Systems and Technologies</a></h1>
             <nav id="nav">
                 <ul>
                     <li><a href="../../prelim/prelims.html">Prelims</a></li>
-                    <li>Midterms
+                    <li><a href = "#">Midterms</a>
                         <ul>
                             <li><a href="../../midterm/links/CSS.html">CSS</a></li>
                             <li><a href="../../midterm/links/javascript.html">JavaScript</a></li>
                         </ul>
                     </li>
-                    <li>Finals
+                    <li><a href = "#">Finals</a>
                         <ul>
                             <li><a href="servlet.html">Servlet</a></li>
                             <li><a href="nodejs.html">NodeJS</a></li>
@@ -104,9 +104,7 @@
                 <ul class="actions">
                     <li><a href="../assets/OWASP.pdf" download class="button">download PDF</a></li>
                 </ul>
-
             </div>
-            <a href="#three" class="goto-next scrolly">Next</a>
         </section>
 
 
@@ -121,7 +119,7 @@
                 <li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
             </ul>
             <ul class="copyright">
-                <li>&copy; Untitled. All rights reserved.</li>
+                <li>&copy; 2018. All rights reserved.</li>
                 <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
             </ul>
         </footer>
