--- a/links/midterm/links/javascript.html
+++ b/links/midterm/links/javascript.html
@@ -14,17 +14,17 @@
 
 		<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="../prelim/prelims.html">Web Systems and Technologies</a></h1>
+					<h1 id="logo"><a href="../../../index.html">Web Systems and Technologies</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="../../prelim/prelims.html">Prelims</a></li>
-                            <li>Midterms
+                            <li><a href = "#">Midterms</a>
                             <ul>
 									<li><a href="CSS.html">CSS</a></li>
 									<li><a href="javascript.html">JavaScript</a></li>
                                 </ul>
                             </li>
-                            <li>Finals
+                            <li><a href = "#">Finals</a>
                             <ul>
 									<li><a href="../../finals/links/servlet.html">Servlet</a></li>
 									<li><a href="../../finals/links/nodejs.html">NodeJS</a></li>
@@ -165,57 +165,8 @@
 						</ul>	
 								
 					</div>
-					<a href="#twelve" class="goto-next scrolly">Next</a>
 				</section>    
             
-				<section id="" class="wrapper style1 special fade-up">
-					<div class="container">
-						<header class="major">
-							<h2>Accumsan sed tempus adipiscing blandit</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
-						</header>
-						<div class="box alt">
-							<div class="row uniform">
-								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-area-chart"></span>
-									<h3>Ipsum sed commodo</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-comment"></span>
-									<h3>Eleifend lorem ornare</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="4u$ 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-flask"></span>
-									<h3>Cubilia cep lobortis</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-paper-plane"></span>
-									<h3>Non semper interdum</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-file"></span>
-									<h3>Odio laoreet accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-								<section class="4u$ 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-lock"></span>
-									<h3>Massa arcu accumsan</h3>
-									<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-								</section>
-							</div>
-						</div>
-						<footer class="major">
-							<ul class="actions">
-								<li><a href="#" class="button">Back to the Top</a></li>
-							</ul>
-						</footer>
-                        <center><a href="css.html" class="button">Go Back</a></center>
-					</div>
-				</section>
             	<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
@@ -227,7 +178,7 @@
 						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2018. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
