--- a/links/prelim/prelims.html
+++ b/links/prelim/prelims.html
@@ -15,22 +15,22 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="prelims.html">Web Systems and Technologies</a></h1>
+					<h1 id="logo"><a href="../../index.html">Web Systems and Technologies</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="prelims.html">Prelims</a></li>
-                            <li>Midterms
+                            <li><a href = "#">Midterms</a>
                             <ul>
 									<li><a href="../midterm/links/CSS.html">CSS</a></li>
 									<li><a href="../midterm/links/javascript.html">JavaScript</a></li>
                                 </ul>
                             </li>
-                            <li>Finals
+                            <li><a href = "#">Finals</a>
                             <ul>
-									<li><a href="servlet.html">Servlet</a></li>
-									<li><a href="nodejs.html">NodeJS</a></li>
-                                    <li><a href="php.html">PHP</a></li>
-                                    <li><a href="owasp.html">OWASP</a></li>
+									<li><a href="../finals/links/servlet.html">Servlet</a></li>
+									<li><a href="../finals/links/nodejs.html">NodeJS</a></li>
+                                    <li><a href="../finals/links/php.html">PHP</a></li>
+                                    <li><a href="../finals/links/owasp.html">OWASP</a></li>
                             </ul>
                             </li>
 
@@ -129,10 +129,8 @@
 					
 						<ul class="actions">
 							<li><a href="./images/status-code.png" download class="button">download image</a></li>
-						</ul>	
-								
+						</ul>			
 					</div>
-					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
 
 
@@ -150,7 +148,7 @@
 						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2018. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</footer>
 
